--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@rainbow-me/rainbowkit": "^0.12.3",
+    "client": "^0.0.1",
+    "ethers": "^5.7.2",
     "framer-motion": "^10.3.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "wagmi": "^0.12.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
