--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rainbow-me/rainbowkit": "^0.12.3",
     "client": "^0.0.1",
     "ethers": "^5.7.2",
+    "firebase": "^9.22.1",
     "framer-motion": "^10.3.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
